--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "next dev"
+    "dev": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "ganache-cli": "^6.12.2",
     "mocha": "^9.2.2",
     "next": "^12.1.4",
+    "next-routes": "^1.4.2",
     "react": "17.0",
     "react-dom": "17.0",
     "react-scripts": "4.0.1",
